--- a/index.html
+++ b/index.html
@@ -1,8 +1,55 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/home.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/countdown/jquery.countdown.css" />
+
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="assets/countdown/jquery.countdown.js"></script>
+	<script src="assets/js/script.js"></script>
 </head>
 <body>
+	<header>
+		<div id="headerBox">
+			<p class="titleLeft">I L <span class="titleRight">VE TENNIS</span></p>
+			<img class="imgballetennis" src="img/balletennis.png">
+		</div>
+	</header>
+	<div id="containerFirstPart">
+		<div id="contentFirstPart">
+			<h2 class="sousTexte">Lorem ipsum dolor sit amet elit ?</h2>
+			<p class="sousTexte2">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut </p>
+			<p class="sousTexte2">enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="sousTexte2">ullamco laboris nisi ut aliquip ex ea commodo</p>
+			<p class="sousTexte2">consequat.</p>
+		</div>
+
+		<div id="allButton">
+			<a href=""><div id="buttonWimbledon"><p>DECOMPTE WIMBLEDON</p></div></a><a href=""><div id="buttonStatistiques"><p>Statistiques des joueurs</p></div></a>
+
+
+			<!-- <a id="buttonFirstPart" href="">DECOMPTE WIMBLEDON</a>
+			<a id="buttonFirstPart" href="">STATISTIQUES DES JOUEURS</a> -->
+
+		</div>
+	<img style="margin-left: 92px;"src="img/terraintennis.png">
+
+	</div>
+
+	<div id="containerSecondPart">
+		<div id="contentSecondPart">
+			<p class="titleSecondPart">WINBLEDON Championships 2013</p>
+			<p class="sousTexteSecondPart topSecondPart">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut </p>
+			<p class="sousTexteSecondPart">enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="sousTexteSecondPart">ullamco laboris nisi ut aliquip.</p>
+			<div class="ligne"></div>
+			<p class="timeSecondPart">Time before the first match</p>
+		</div>
+		<div id="contentCompteur">
+			<div id="countdown"></div>
+		</div>
+	</div>
 
 </body>
 </html>
