--- a/webapp.html
+++ b/webapp.html
@@ -4,137 +4,124 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/resetG.css">
 	<link rel="stylesheet" type="text/css" href="css/webapp.css">
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="javascript/webapp.js"></script>
 </head>
 <body>
 	<div id="container">
 		<nav>
-			<input type="text">
+			<div>
+				<input type="text" placeholder="Entrer le nom d'un joueur">
+			</div>
 			<ul>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li class="click">
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
-					<p>NADAL Rafael</p>
-					<p>rank : 5</p>
-				</li>
-				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
-					<p>NADAL Rafael</p>
-					<p>rank : 5</p>
-				</li>
-				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
-					<p>NADAL Rafael</p>
-					<p>rank : 5</p>
-				</li>
-				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
-					<p>NADAL Rafael</p>
-					<p>rank : 5</p>
-				</li>
-				<li>
-					<img src="assets/img/player/thumbnails/nadal.jpg">
+					<img src="img/player/thumbnails/nadal.jpg">
 					<p>NADAL Rafael</p>
 					<p>rank : 5</p>
 				</li>
 			</ul>
+			<div>
+				<div></div>
+			</div>
 		</nav>
 		<article>
 			<header>
-				<img src="assets/img/player/nadal.png"/>
+				<img src="img/player/nadal.png"/>
 				<div>
 					<h1>Nadal Rafael</h1>
 					<div>
@@ -168,20 +155,134 @@
 			</nav>
 			<section id="resume2013">
 				<div>
-					<h3>Victoire/D&eacute;faites</h3>
+					<h3>Victoire / D&eacute;faites</h3>
 					<p>Gagn&eacute;</p>
 					<p>Perdu</p>
 					<div>
-						<p>Tous</p>
-						<div>
-							<div>
+						<div class="statsBarConatiner">
+							<p>Tous</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
 								<div></div>
-								<p></p>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
 							</div>
-							<div></div>
-							<div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Grand Chelem</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
 								<div></div>
-								<p></p>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Masters 1000</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Tie Breaks</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Contre un top 10</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Dernier set</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Apr&egrave;s avoir gagner le 1er set</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Apr&egrave;s avoir perdu le 1er set</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+							</div>
+						</div>
+						<div class="statsBarConatiner">
+							<p>Contre un droitier</p>
+							<div class="statsBar">
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
+								<div></div>
+								<div>
+									<div></div>
+									<p>80</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -189,17 +290,17 @@
 				<div>
 					<h3>Surface</h3>
 					<div>
-						<img src="assets/img/terrainDur.png"/>
+						<img src="img/terrainDur.png"/>
 						<div></div>
 						<div></div>
 					</div>
 					<div>
-						<img src="assets/img/terrainDur.png"/>
+						<img src="img/terrainDur.png"/>
 						<div></div>
 						<div></div>
 					</div>
 					<div>
-						<img src="assets/img/terrainDur.png"/>
+						<img src="img/terrainDur.png"/>
 						<div></div>
 						<div></div>
 					</div>
