--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
 <html>
 <head>
 	<title></title>
@@ -5,9 +7,27 @@
     <link rel="stylesheet" href="css/home.css" type="text/css" media="screen">
     <link rel="stylesheet" href="assets/countdown/jquery.countdown.css" />
 
+
+
+
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="assets/countdown/jquery.countdown.js"></script>
 	<script src="assets/js/script.js"></script>
+
+	  <link type="text/css" href="css/fancymoves.css" media="screen" charset="utf-8" rel="stylesheet"  />
+	  <script type="text/javascript" src="js/slider.js" charset="utf-8"></script>
+
+	  <!-- Demo only -->
+	  <link type="text/css" href="demo/demo.css" media="screen" charset="utf-8" rel="stylesheet"  />
+	  <script type="text/javascript" src="demo/demo.js"></script>
+	  
+	  <!-- FancyBox scripts -->
+	  <script type="text/javascript" src="fancybox-1.3.4/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+	  <script type="text/javascript" src="fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+	  <link rel="stylesheet" type="text/css" href="fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+
+
+
 </head>
 <body>
 	<header>
@@ -26,7 +46,7 @@
 		</div>
 
 		<div id="allButton">
-			<a href=""><div id="buttonWimbledon"><p>DECOMPTE WIMBLEDON</p></div></a><a href=""><div id="buttonStatistiques"><p>Statistiques des joueurs</p></div></a>
+			<a href=""><div id="buttonWimbledon"><p class="wimb">décompte wimbledon</p></div></a><a href=""><div id="buttonStatistiques"><p class="stat">Statistiques des joueurs</p></div></a>
 
 
 			<!-- <a id="buttonFirstPart" href="">DECOMPTE WIMBLEDON</a>
@@ -48,8 +68,107 @@
 		</div>
 		<div id="contentCompteur">
 			<div id="countdown"></div>
+			<div id="writeCountDown">
+				<span class="days">days</span>
+				<span class="hours">hours</span>
+				<span class="minutes">minutes</span>
+			</div>
 		</div>
 	</div>
+	<div id="containerThirdPart">
+		<div id="contentThirdPart">
+			<h1 class="titleThirdPart">CHOISI TON JOUEUR CLASSÉ DANS LE TOP 10</h1>
+			<p class="textThirPart">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<img id="lueurThirdPart" src="img/lueur.png">
+
+			<div id="slider-three">
+				 <div>
+					<img id="imgDjoko" src="images/1_Novak_DJOKOVIC.png" style="width:42%;m" alt="" />
+  				</div>
+  				<div>
+					<img id="imgdada" src="images/2_Andy_MURRAY.png" style="width:42%;m"alt="" />
+  				</div>
+  				<div>
+					<img id="imgFederer" src="images/3_Roger_FEDERER.png" style="width:42%;m" alt="" />
+  				</div>
+  				<div>
+					<img id="imgNadal" style="width:42%;m" src="images/4_Rafael_NADAL.png" alt="" />
+  				</div>
+   				<div>
+					<img id="imgFerrer" style="width:42%;m"  src="images/5_David_FERRER.png" alt="" />
+  				</div>
+   				<div>
+					<img id="imgBerdych" style="width:42%;m" src="images/6_Tomas_BERDYCH.png" alt="" />
+  				</div>
+  				<div>
+					<img id="imgPotro" style="width:42%;m" src="images/7_Juan_Martin_DEL_POTRO.png" alt="" />
+  				</div>
+   				<div>
+					<img id="imgTsonga" style="width:42%;m" src="images/8_Jo-Wilfried_TSONGA.png" alt="" />
+  				</div>
+   				<div>
+					<img id="imgGasquet" style="width:42%;m"  src="images/9_Richard_GASQUET.png" alt="" />
+  				</div>
+   				<div>
+					<img id="imgWawrinka" style="width:42%;m" src="images/10_Stanislas_WAWRINKA.png" alt="" />
+  				</div> 				
+
+			</div>
+        	<div  id="containerPlayerName">
+        		<div id="contentPlayerNameDjoko" class="hide">
+					<p class="playerName">Novak Djokovic</p>
+				</div>
+        		<div id="contentPlayerNameMurray" class="hide">
+					<p class="playerName">Andy Murray</p>
+				</div>
+        		<div id="contentPlayerNameRoger" class="hide">
+					<p class="playerName">Roger Federer</p>
+				</div>
+        		<div id="contentPlayerNameNadal" class="hide">
+					<p class="playerName">Rafael Nadal</p>
+				</div>
+        		<div id="contentPlayerNameFerrer" class="hide">
+					<p class="playerName">David Ferrer</p>
+				</div>
+        		<div id="contentPlayerNameBerdych" class="hide">
+					<p class="playerName">Tomas Berdych</p>
+				</div>
+        		<div id="contentPlayerNamePotro" class="hide">
+					<p class="playerName">Juan Martin Del Potro</p>
+				</div>
+        		<div id="contentPlayerNameTsonga" class="hide">
+					<p class="playerName">Jo-Wilfried Tsonga</p>
+				</div>
+        		<div id="contentPlayerNameGasquet" class="hide">
+					<p class="playerName">Richard Gasquet</p>
+				</div>
+				<div id="contentPlayerNameWawrinka" class="hide">
+					<p class="playerName">Stanislas Wawrinka</p>
+				</div>        	       		
+																	
+        	</div>
+		</div>
+	</div>
+
+	<div id="containerFourPart">
+		<div id="contentFourPart">
+			<h1 class="titleFourPart">OU RECHERCHE LE JOUEUR DE TON CHOIX</h1>
+			<form action="" id="buttonFourPart">
+				<input type="text" id="inputText" placeholder="Entrer le nom d'un joueur" style="color:red;">
+				<input type="submit" value="" id="submit" style="background-image:url(img/search.png);background-repeat:no-repeat;  background-position:6px;background-position:mar ">
+			</form>
+			<div id="imgFourPart">
+				<img src="img/playerNadal.png" >
+			</div>
+			<p class="playerNameFourPart">Roger Federer</p>
+			<div id="buttonAnalysePerformances">
+				<a href="" style="text-decoration:none;"><p class="analysePerformances">ANALYSER SES PERFORMANCES</p></a>
+			</div>
+		</div>
+	
+
+	</div>
+	<!-- Slider -->
 
 </body>
 </html>
