--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/home.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="assets/countdown/jquery.countdown.css" />
-
-
 
 
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -15,17 +10,20 @@
 	<script src="assets/js/script.js"></script>
  	<script src="js/jquery-ui.js"></script>
 
-	  <link type="text/css" href="css/fancymoves.css" media="screen" charset="utf-8" rel="stylesheet"  />
-	  <script type="text/javascript" src="js/slider.js" charset="utf-8"></script>
+	<link type="text/css" href="css/fancymoves.css" media="screen" charset="utf-8" rel="stylesheet"  />
+	<script type="text/javascript" src="js/slider.js" charset="utf-8"></script>
+	<script type="text/javascript" src="demo/demo.js"></script>
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/home.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/countdown/jquery.countdown.css" />
 
-	  <!-- Demo only -->
-	  <link type="text/css" href="demo/demo.css" media="screen" charset="utf-8" rel="stylesheet"  />
-	  <script type="text/javascript" src="demo/demo.js"></script>
-	    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-	  <!-- FancyBox scripts -->
-	  <script type="text/javascript" src="fancybox-1.3.4/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-	  <script type="text/javascript" src="fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-	  <link rel="stylesheet" type="text/css" href="fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+
+	<script type="text/javascript" src="js/localscroll/jquery.localscroll.js"></script>
+	<script type="text/javascript" src="js/localscroll/jquery.scrollTo.js"></script>
+    
+	<script type="text/javascript" src="js/lancement.js"></script><!-- permet le lancement de la fonction de scroll -->
+
 
 		<script>
 		  $(function() {
@@ -36,10 +34,21 @@
 		      "Rafael Nadal",
 		      "David Ferrer",
 		      "Tomas Berdych",
-		      "Juan Martin Del Potro<",
+		      "Juan Martin Del Potro",
 		      "Jo-Wilfried Tsonga",
 		      "Richard Gasquet",
-		      "Stanislas Wawrinka"
+		      "Stanislas Wawrinka",
+		      "Marin Cilic",
+		      "Janko Tipsarevic",
+		      "Nicolas Almagro",
+		      "Tomy Haas",
+		      "SKei Nishikori",
+		      "Milos Raonic",
+		      "Juan Monaco",
+		      "Gilles Simon",
+		      "Philipp Kohlschereiber",
+		      "Sam Querrey",
+
 		    ];
 		    $( "#inputText" ).autocomplete({
 		      source: availableTags
@@ -54,19 +63,186 @@
 
 
 		 function changeImg(){
+		 	var search3='';
+		 	$( "#inputText" ).autocomplete({
+			  select: function( event, ui ) {
+			  	var search3 = ui.item.label;
+			  	search3 = search3.toLowerCase() 
+
+
+		 	 if (search3 == 'novak djokovic') {
+		 	 	$('#changeImgPlayer').attr('src','img/player/1_Novak_DJOKOVIC.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Novak Djokovic"; 
+		 	 }
+		 	 else if (search3 == 'andy Murray'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/2_Andy_MURRAY.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Andy Murray"; 
+		 	 }
+		 	 else if (search3 == 'roger federer'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/3_Roger_FEDERER.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Roger Federer"; 
+		 	 }
+		 	 else if (search3 == 'rafael nadal'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
+		 	 }
+		 	 else if (search3 == 'david ferrer'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/5_David_FERRER.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="David Ferrer"; 
+		 	 }
+		 	 else if (search3 == 'tomas berdych'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/6_Tomas_BERDYCH.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomas Berdych"; 
+		 	 }
+		 	 else if (search3 == 'juan martin del potro'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/7_Juan_Martin_DEL_POTRO.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="juan Martin Del Potro"; 
+		 	 }
+		 	 else if (search3 == 'jo-wilfried tsonga'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/8_Jo-Wilfried_TSONGA.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Jo-Wilfried Tsonga"; 
+		 	 }
+		 	 else if (search3 == 'richard gasquet'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/9_Richard_GASQUET.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Richard Gasquet"; 
+		 	 }
+		 	 else if (search3 == 'stanislas wawrinka'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/10_Stanislas_WAWRINKA.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Stanislas Wawrinka"; 
+		 	 }
+		 	 else if (search3 == 'marin cilic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/11_MARIN_CILIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Marin Cilic"; 
+		 	 }
+		 	 else if (search3 == 'janko tipsarevic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/13_JANKO_TIPSAREVIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Janko Tipsarevic"; 
+		 	 }
+		 	 else if (search3 == 'nicolas almagro'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/13_NICOLAS_ALMAGRO.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Nicolas Almagro"; 
+		 	 }
+		 	 else if (search3 == 'tomy haas'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/14_TOMMY_HAAS.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomy Haas"; 
+		 	 }
+		 	 else if (search3 == 'kei nishikori'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/15_KEI_NISHIKORI.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="SKei Nishikori"; 
+		 	 }
+		 	 else if (search3 == 'milos raonic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/16_MILOS_RAONIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Milos Raonic"; 
+		 	 }
+		 	 else if (search3 == 'juan monaco'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/17_JUAN_MONACO.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Juan Monaco"; 
+		 	 }
+		 	 else if (search3 == 'gilles simon'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/18_GILLES_SIMON.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Gilles Simon"; 
+		 	 }
+		 	 else if (search3 == 'philipp kohlschreiber'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/19_PHILIPP_KOHLSCHREIBER.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Philipp Kohlschereiber"; 
+		 	 }
+		 	 else if (search3 == 'sam querrey'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/20_SAM_QUERREY.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Sam Querrey"; 
+		 	 }
+		 	 else{
+		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
+		 	 }
+			  }
+			});
+
 		 	 var search2 = $('#inputText').val();
 		 	 search2 = search2.toLowerCase() 
-		 	 console.log(search2);
 
 		 	 if (search2 == 'novak djokovic') {
-
-		 	 	$('#changeImgPlayer').attr('src','img/player/djokovik.png');
-
+		 	 	$('#changeImgPlayer').attr('src','img/player/1_Novak_DJOKOVIC.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Novak Djokovic"; 
 		 	 }
-
+		 	 else if (search2 == 'andy Murray'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/2_Andy_MURRAY.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Andy Murray"; 
+		 	 }
+		 	 else if (search2 == 'roger federer'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/3_Roger_FEDERER.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Roger Federer"; 
+		 	 }
+		 	 else if (search2 == 'rafael nadal'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
+		 	 }
+		 	 else if (search2 == 'david ferrer'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/5_David_FERRER.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="David Ferrer"; 
+		 	 }
+		 	 else if (search2 == 'tomas berdych'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/6_Tomas_BERDYCH.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomas Berdych"; 
+		 	 }
+		 	 else if (search2 == 'juan martin del potro'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/7_Juan_Martin_DEL_POTRO.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="juan Martin Del Potro"; 
+		 	 }
+		 	 else if (search2 == 'jo-wilfried tsonga'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/8_Jo-Wilfried_TSONGA.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Jo-Wilfried Tsonga"; 
+		 	 }
+		 	 else if (search2 == 'richard gasquet'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/9_Richard_GASQUET.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Richard Gasquet"; 
+		 	 }
+		 	 else if (search2 == 'stanislas wawrinka'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/10_Stanislas_WAWRINKA.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Stanislas Wawrinka"; 
+		 	 }
+		 	 else if (search2 == 'marin cilic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/11_MARIN_CILIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Marin Cilic"; 
+		 	 }
+		 	 else if (search2 == 'janko tipsarevic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/12_JANKO_TIPSAREVIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Janko Tipsarevic"; 
+		 	 }
+		 	 else if (search2 == 'nicolas almagro'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/13_NICOLAS_ALMAGRO.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Nicolas Almagro"; 
+		 	 }
+		 	 else if (search2 == 'tomy haas'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/14_TOMMY_HAAS.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomy Haas"; 
+		 	 }
+		 	 else if (search2 == 'kei nishikori'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/15_KEI_NISHIKORI.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="SKei Nishikori"; 
+		 	 }
+		 	 else if (search2 == 'milos raonic'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/16_MILOS_RAONIC.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Milos Raonic"; 
+		 	 }
+		 	 else if (search2 == 'juan monaco'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/17_JUAN_MONACO.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Juan Monaco"; 
+		 	 }
+		 	 else if (search2 == 'gilles simon'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/18_GILLES_SIMON.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Gilles Simon"; 
+		 	 }
+		 	 else if (search2 == 'philipp kohlschreiber'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/19_PHILIPP_KOHLSCHREIBER.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Philipp Kohlschereiber"; 
+		 	 }
+		 	 else if (search2 == 'sam querrey'){
+		 	 	$('#changeImgPlayer').attr('src','img/player/20_SAM_QUERREY.png');		 	 	
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Sam Querrey"; 
+		 	 }
 		 	 else{
-		 	 	$('#changeImgPlayer').attr('src','img/player/nadal.png');
-
+		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
 		 	 }
 
 		 }
@@ -90,7 +266,7 @@
 		</div>
 
 		<div id="allButton">
-			<a href=""><div id="buttonWimbledon"><p class="wimb">décompte wimbledon</p></div></a><a href=""><div id="buttonStatistiques"><p class="stat">Statistiques des joueurs</p></div></a>
+			<a href="#containerSecondPart"><div id="buttonWimbledon"><p class="wimb">décompte wimbledon</p></div></a><a href="#containerThirdPart"><div id="buttonStatistiques"><p class="stat">Statistiques des joueurs</p></div></a>
 
 
 			<!-- <a id="buttonFirstPart" href="">DECOMPTE WIMBLEDON</a>
@@ -127,34 +303,34 @@
 
 			<div id="slider-three">
 				 <div>
-					<img id="imgDjoko" src="images/1_Novak_DJOKOVIC.png"  alt="" />
+					<img id="imgDjoko" src="img/1_Novak_DJOKOVIC.png"  alt="" />
   				</div>
   				<div>
-					<img id="imgdada" src="images/2_Andy_MURRAY.png" alt="" />
+					<img id="imgdada" src="img/2_Andy_MURRAY.png" alt="" />
   				</div>
   				<div>
-					<img id="imgFederer" src="images/3_Roger_FEDERER.png" alt="" />
+					<img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" />
   				</div>
   				<div>
-					<img id="imgNadal" src="images/4_Rafael_NADAL.png" alt="" />
+					<img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" />
   				</div>
    				<div>
-					<img id="imgFerrer"  src="images/5_David_FERRER.png" alt="" />
+					<img id="imgFerrer"  src="img/5_David_FERRER.png" alt="" />
   				</div>
    				<div>
-					<img id="imgBerdych"  src="images/6_Tomas_BERDYCH.png" alt="" />
+					<img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" />
   				</div>
   				<div>
-					<img id="imgPotro"  src="images/7_Juan_Martin_DEL_POTRO.png" alt="" />
+					<img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" />
   				</div>
    				<div>
-					<img id="imgTsonga" src="images/8_Jo-Wilfried_TSONGA.png" alt="" />
+					<img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" />
   				</div>
    				<div>
-					<img id="imgGasquet"   src="images/9_Richard_GASQUET.png" alt="" />
+					<img id="imgGasquet"   src="img/9_Richard_GASQUET.png" alt="" />
   				</div>
    				<div>
-					<img id="imgWawrinka" src="images/10_Stanislas_WAWRINKA.png" alt="" />
+					<img id="imgWawrinka" src="img/10_Stanislas_WAWRINKA.png" alt="" />
   				</div> 				
 
 			</div>
@@ -204,7 +380,7 @@
 			<div id="imgFourPart">
 				<img id="changeImgPlayer" src="img/playerNadal.png" >
 			</div>
-			<p class="playerNameFourPart">Roger Federer</p>
+			<p id='changeNamePlayer' class="playerNameFourPart">Roger Federer</p>
 			<div id="buttonAnalysePerformances">
 				<a href="" style="text-decoration:none;"><p class="analysePerformances">ANALYSER SES PERFORMANCES</p></a>
 			</div>
