--- a/webapp.html
+++ b/webapp.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="css/resetG.css">
 	<link rel="stylesheet" type="text/css" href="css/webapp.css">
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="text/javascript" src="javascript/webapp.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -146,7 +145,7 @@
 			</header>
 			<nav>
 				<ul>
-					<li>R&eacute;sum&eacute; 2013</li>
+					<li class="active">R&eacute;sum&eacute; 2013</li>
 					<li>R&eacute;sum&eacute; carri&egrave;re</li>
 					<li>Titres</li>
 					<li>Finales</li>
@@ -162,12 +161,12 @@
 						<div class="statsBarConatiner">
 							<p>Tous</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -176,12 +175,12 @@
 						<div class="statsBarConatiner">
 							<p>Grand Chelem</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -190,12 +189,12 @@
 						<div class="statsBarConatiner">
 							<p>Masters 1000</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -204,12 +203,12 @@
 						<div class="statsBarConatiner">
 							<p>Tie Breaks</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -218,12 +217,12 @@
 						<div class="statsBarConatiner">
 							<p>Contre un top 10</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -232,12 +231,12 @@
 						<div class="statsBarConatiner">
 							<p>Dernier set</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -246,12 +245,12 @@
 						<div class="statsBarConatiner">
 							<p>Apr&egrave;s avoir gagner le 1er set</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -260,12 +259,12 @@
 						<div class="statsBarConatiner">
 							<p>Apr&egrave;s avoir perdu le 1er set</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -274,12 +273,12 @@
 						<div class="statsBarConatiner">
 							<p>Contre un droitier</p>
 							<div class="statsBar">
-								<div>
+								<div class="perdu">
 									<div></div>
 									<p>80</p>
 								</div>
 								<div></div>
-								<div>
+								<div class="gagne">
 									<div></div>
 									<p>80</p>
 								</div>
@@ -317,6 +316,7 @@
 		</article>
 	</div>
 
+	<script type="text/javascript" src="javascript/webapp.js"></script>
 
 </body>
 </html>
