--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 		      "Janko Tipsarevic",
 		      "Nicolas Almagro",
 		      "Tomy Haas",
-		      "SKei Nishikori",
+		      "Kei Nishikori",
 		      "Milos Raonic",
 		      "Juan Monaco",
 		      "Gilles Simon",
-		      "Philipp Kohlschereiber",
+		      "Philipp Kohlschreiber",
 		      "Sam Querrey",
 
 		    ];
@@ -74,7 +74,7 @@
 		 	 	$('#changeImgPlayer').attr('src','img/player/1_Novak_DJOKOVIC.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Novak Djokovic"; 
 		 	 }
-		 	 else if (search3 == 'andy Murray'){
+		 	 else if (search3 == 'andy murray'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/2_Andy_MURRAY.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Andy Murray"; 
 		 	 }
@@ -115,20 +115,20 @@
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Marin Cilic"; 
 		 	 }
 		 	 else if (search3 == 'janko tipsarevic'){
-		 	 	$('#changeImgPlayer').attr('src','img/player/13_JANKO_TIPSAREVIC.png');		 	 	
+		 	 	$('#changeImgPlayer').attr('src','img/player/12_JANKO_TIPSAREVIC.png');		 	 	
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Janko Tipsarevic"; 
 		 	 }
 		 	 else if (search3 == 'nicolas almagro'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/13_NICOLAS_ALMAGRO.png');		 	 	
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Nicolas Almagro"; 
 		 	 }
-		 	 else if (search3 == 'tomy haas'){
+		 	 else if (search3 == 'tommy haas'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/14_TOMMY_HAAS.png');		 	 	
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomy Haas"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tommy Haas"; 
 		 	 }
 		 	 else if (search3 == 'kei nishikori'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/15_KEI_NISHIKORI.png');		 	 	
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="SKei Nishikori"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Kei Nishikori"; 
 		 	 }
 		 	 else if (search3 == 'milos raonic'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/16_MILOS_RAONIC.png');		 	 	
@@ -152,7 +152,7 @@
 		 	 }
 		 	 else{
 		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Joueur Inconnu"; 
 		 	 }
 			  }
 			});
@@ -164,7 +164,7 @@
 		 	 	$('#changeImgPlayer').attr('src','img/player/1_Novak_DJOKOVIC.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Novak Djokovic"; 
 		 	 }
-		 	 else if (search2 == 'andy Murray'){
+		 	 else if (search2 == 'andy murray'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/2_Andy_MURRAY.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Andy Murray"; 
 		 	 }
@@ -212,13 +212,13 @@
 		 	 	$('#changeImgPlayer').attr('src','img/player/13_NICOLAS_ALMAGRO.png');		 	 	
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Nicolas Almagro"; 
 		 	 }
-		 	 else if (search2 == 'tomy haas'){
+		 	 else if (search2 == 'tommy haas'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/14_TOMMY_HAAS.png');		 	 	
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tomy Haas"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Tommy Haas"; 
 		 	 }
 		 	 else if (search2 == 'kei nishikori'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/15_KEI_NISHIKORI.png');		 	 	
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="SKei Nishikori"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Kei Nishikori"; 
 		 	 }
 		 	 else if (search2 == 'milos raonic'){
 		 	 	$('#changeImgPlayer').attr('src','img/player/16_MILOS_RAONIC.png');		 	 	
@@ -242,7 +242,7 @@
 		 	 }
 		 	 else{
 		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
-		 	 	document.getElementById("changeNamePlayer").innerHTML ="Rafael Nadal"; 
+		 	 	document.getElementById("changeNamePlayer").innerHTML ="Joueur Inconnu"; 
 		 	 }
 
 		 }
