evolution anim home

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Sam Querrey"; 
 		 	 }
 		 	 else{
-		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	$('#changeImgPlayer').attr('src','img/player/joueur_inconnu.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Joueur Inconnu"; 
 		 	 }
 			  }
@@ -241,7 +241,7 @@
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Sam Querrey"; 
 		 	 }
 		 	 else{
-		 	 	$('#changeImgPlayer').attr('src','img/player/4_Rafael_NADAL.png');
+		 	 	$('#changeImgPlayer').attr('src','img/player/joueur_inconnu.png');
 		 	 	document.getElementById("changeNamePlayer").innerHTML ="Joueur Inconnu"; 
 		 	 }
 
@@ -273,7 +273,7 @@
 			<a id="buttonFirstPart" href="">STATISTIQUES DES JOUEURS</a> -->
 
 		</div>
-	<img style="margin-left: 92px;"src="img/terraintennis.png">
+	<img class="terraintennis" style="margin-left: 92px;"src="img/terraintennis.png">
 
 	</div>
 
