--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 	<script type="text/javascript" src="js/localscroll/jquery.scrollTo.js"></script>
     
 	<script type="text/javascript" src="js/lancement.js"></script><!-- permet le lancement de la fonction de scroll -->
-	<script type="text/javascript">
-	
-	</script>
+
 
 </head>
 <body>
@@ -50,12 +48,12 @@
 			<a href="#containerSecondPart" style='text-decoration:none;'><div id="buttonWimbledon"><p class="wimb">décompte wimbledon</p></div></a><a href="#containerThirdPart" style='text-decoration:none;'><div id="buttonStatistiques"><p class="stat">Statistiques des joueurs</p></div></a>
 		</div>
 	<img id="courttennis" src="img/terraintennis.png">
-	<video class="terraintennis" autoplay="true" style="margin-left: 92px;margin-top:47px;">
+	<video class="terraintennis" autoplay="true" style="margin-top:-1px;">
 	  <source src="img/video/intro.mp4" type="video/mp4" />
 	  <source src="img/video/intro.webm" type="video/webm" />
 	   <source src="img/video/intro.ogv" type="video/ogg" />
 
-	  Vous n'avez pas de navigateur moderne, donc pas de balise video HTML5 !
+	<img id="courttennis" src="img/terraintennis.png">
 	</video>
 	</div>
 
